k8s/infrastructure/controllers/argocd/base/GRPCRoute.yaml
# https://github.com/vehagn/homelab/blob/main/k8s/infra/controllers/argocd/grpc-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpcroute
  namespace: argocd
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-talmox-hera-home-karlsen-fr}
  hostnames: [argocd.talmox.hera.home.karlsen.fr]
  rules:
    - matches: [headers: [{name: Content-Type, value: application/grpc}]]
      backendRefs: [{name: argocd-server-grpc, kind: Service, port: 80}]
