k8s/infrastructure/controllers/argocd/base/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-applicationcontroller
  namespace: argocd
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: argocd-application-controller}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8082', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-server}], toPorts: [ports: [{port: '8082', protocol: TCP}]]}
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '8082', protocol: TCP}]]}
  egress:
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: valkey}}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-repo-server}}], toPorts: [ports: [{port: '8081', protocol: TCP}]]}
    - {toEntities: [kube-apiserver]}
    - {toCIDR: [192.168.1.210/32], toPorts: [ports: [{port: '6443', protocol: TCP}]]}  # hyades API server
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-reposerver
  namespace: argocd
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: argocd-repo-server}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8084', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '8084', protocol: TCP}]]}
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-server}], toPorts: [ports: [{port: '8081', protocol: TCP}]]}
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-application-controller}], toPorts: [ports: [{port: '8081', protocol: TCP}]]}
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-applicationset-controller}], toPorts: [ports: [{port: '8081', protocol: TCP}]]}
  egress:
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: valkey}}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
    - {toEntities: [world], toPorts: [ports: [{port: '443', protocol: TCP}]]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-server
  namespace: argocd
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: argocd-server}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # Envoy Gateway
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '8083', protocol: TCP}]]}  # metrics
  egress:
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: valkey}}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-repo-server}}], toPorts: [ports: [{port: '8081', protocol: TCP}]]}
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-application-controller}}], toPorts: [ports: [{port: '8082', protocol: TCP}]]}
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-applicationset-controller}}], toPorts: [ports: [{port: '7000', protocol: TCP}]]}
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}}], toPorts: [ports: [{port: '10443', protocol: TCP}]]}  # Needed for OIDC / Authelia
    - {toEntities: [kube-apiserver]}
    - {toCIDR: [192.168.1.210/32], toPorts: [ports: [{port: '6443', protocol: TCP}]]}  # hyades API server
    # Add egress to world if using webhooks in the future
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-notifications
  namespace: argocd
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: argocd-notifications-controller}}
  # ingress: []
  egress:
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: ntfy, app.kubernetes.io/name: ntfy}}], toPorts: [ports: [{port: '8080', protocol: TCP}]]}
    - {toEntities: [kube-apiserver]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-applicationsetcontroller
  namespace: argocd
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: argocd-applicationset-controller}}
  ingress:
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # metrics
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-server}], toPorts: [ports: [{port: '7000', protocol: TCP}]]}  # webhooks
  egress:
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-repo-server}}], toPorts: [ports: [{port: '8081', protocol: TCP}]]}
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: valkey}}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
    - {toEntities: [kube-apiserver]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-valkey
  namespace: argocd
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: valkey}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-server}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-repo-server}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-application-controller}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: argocd, app.kubernetes.io/name: argocd-applicationset-controller}], toPorts: [ports: [{port: '6379', protocol: TCP}]]}
  # egress: []
